terria-external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: external-ip-service
  namespace: terria
spec:
  type: ExternalName
  externalName: 172.208.16.116
  ports:
  - port: 3001
    targetPort: 3001
