airflow.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  namespace: airflow
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - airflow.dev-wins.com
      secretName: airflow-tls
  rules:
  - host: "airflow.dev-wins.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: airflow-cluster-web
            port:
              number: 8080
