ingress_prod1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckan
  namespace: ckan
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/request-timeout: "7200"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "7200"
    appgw.ingress.kubernetes.io/health-probe-timeout: "7200"
    appgw.ingress.kubernetes.io/health-probe-interval: "30"
spec:
  tls:
    - hosts:
      - ihp-wins.unesco.org
      secretName: echo-tls
  rules:
  - host: "ihp-wins.unesco.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ckan
            port:
              number: 80
      - path: "/csw/"
        pathType: Prefix
        backend:
          service:
            name: ckan2pycsw
            port:
              number: 8000
