terria-dev-nag.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terria
  namespace: terria
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - terria.dev-wins.com
      secretName: terria-tls
  rules:
  - host: "terria.dev-wins.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: terria-terriamap
            port:
              number: 80
