terria-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terria
  namespace: terria
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway    
spec:
  rules:
  - host: "data.dev-wins.com"
    http:
      paths:
      - pathType: Prefix
        path: "/terriav8"
        backend:
          service:
            name: terria-terriamap
            port:
              number: 80
